tests/out/error/redef/enum.out
error: redfinition of "More"
tests/out/error/redef/enum.in.bt:1:1 conflict: enum
tests/out/error/redef/enum.in.bt:5:1 conflict: enum
